--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -111,6 +111,24 @@
     color: crimson;
     margin: 5px 0; }
 
+.page-header {
+  text-align: center; }
+
+.logoutButton {
+  float: right; }
+
+.todoList {
+  padding-top: 40px; }
+
+.todoItem {
+  margin-top: 30px; }
+
+.deleteButton {
+  margin-left: 40px; }
+
+.itemChecked {
+  color: #01b9ff !important; }
+
 /* change input's yellow autocompleted style */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
