--- a/src/assets/styles/pages.css
+++ b/src/assets/styles/pages.css
@@ -110,3 +110,21 @@
   .reset-password .error {
     color: crimson;
     margin: 5px 0; }
+
+.page-header {
+  text-align: center; }
+
+.logoutButton {
+  float: right; }
+
+.todoList {
+  padding-top: 40px; }
+
+.todoItem {
+  margin-top: 30px; }
+
+.deleteButton {
+  margin-left: 40px; }
+
+.itemChecked {
+  color: #01b9ff !important; }
