--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -17,7 +17,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #eee; }
+    background-color: #eee;
+    text-align: center; }
+    .login footer .register {
+      width: 50%; }
+    .login footer .resetPassword {
+      width: 50%; }
+    .login footer p {
+      font-size: 10px; }
   .login .styledRouterLink {
     color: #333;
     text-decoration: none;
