--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,8 +2,9 @@
     display: grid;
     padding-left: 70px;
     padding-right: 70px;
+    height: 100%;
     grid-template-columns: 20% 30% 30% 20%;
-    grid-template-rows: auto;
+    grid-template-rows: 5% 10% auto 5%;
     grid-template-areas: 
     "logo ... ... buttons"
     "... form form addButton"
@@ -12,9 +13,14 @@
     justify-content: center;
         .logo {
             grid-area: logo;
+            display: flex;
+            align-items: center;
             p {
                 display: inline-block;
                 font-size: 10px;
+            }
+            svg {
+                color: #03A9F4 !important;
             }
         }
         .title {
@@ -70,10 +76,10 @@
     }
     .page-footer{
         grid-area: footer;
+        margin-top: 70px;
         justify-self: strech;
         align-self: flex-end;
-
-        border: 1px solid red;
+        text-align: center;
 
     }
     
