--- a/src/App.scss
+++ b/src/App.scss
@@ -9,13 +9,12 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  overflow: scroll;
 }
 /* Content - Main area */
 
 .App-Content {
   flex: 1;
-  padding: 20px;
+  padding: 20px 70px;
   // background: $background;
 }
 
