--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,7 +1,8 @@
 .Dashboard {
   display: flex;
   flex: 1;
-  background: ghostwhite; }
+  background: ghostwhite;
+  overflow: scroll; }
 
 .register {
   width: 400px;
@@ -122,15 +123,20 @@
   display: grid;
   padding-left: 70px;
   padding-right: 70px;
+  height: 100%;
   grid-template-columns: 20% 30% 30% 20%;
-  grid-template-rows: auto;
+  grid-template-rows: 5% 10% auto 5%;
   grid-template-areas: "logo ... ... buttons" "... form form addButton" "... todoList todoList ..." "footer footer footer footer";
   justify-content: center; }
   .container .logo {
-    grid-area: logo; }
+    grid-area: logo;
+    display: flex;
+    align-items: center; }
     .container .logo p {
       display: inline-block;
       font-size: 10px; }
+    .container .logo svg {
+      color: #03A9F4 !important; }
   .container .title {
     grid-area: title; }
   .container .buttons {
@@ -169,9 +175,10 @@
       color: #01b9ff !important; }
   .container .page-footer {
     grid-area: footer;
+    margin-top: 70px;
     justify-self: strech;
     align-self: flex-end;
-    border: 1px solid red; }
+    text-align: center; }
 
 /* change input's yellow autocompleted style */
 input:-webkit-autofill,
@@ -198,7 +205,8 @@ body,
   padding: 0;
   font-family: sans-serif;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 body > div {
   height: 100%; }
@@ -323,19 +331,22 @@ span {
   font-size: 16px;
   color: #3f4a77; }
 
+button p, button span {
+  color: #fff;
+  font-size: 11px; }
+
 .center {
   text-align: center; }
 
 .App {
   height: 100%;
   display: flex;
-  flex-direction: row;
-  overflow: scroll; }
+  flex-direction: row; }
 
 /* Content - Main area */
 .App-Content {
   flex: 1;
-  padding: 20px; }
+  padding: 20px 70px; }
 
 .public-pages {
   display: flex;
