--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,7 +5,8 @@ body,
   padding: 0;
   font-family: sans-serif;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 body > div {
   height: 100%; }
